# ruoyi-vue-rust

./: .env  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  application.yaml  config.toml  openapi_dump.json
crates/daoyi-common/: Cargo.toml
crates/daoyi-common-support/: Cargo.toml
crates/daoyi-common-support/src/utils/: enumeration.rs  mod.rs  serde.rs
crates/daoyi-common/src/: lib.rs
crates/daoyi-common/src/app/: auth.rs  common.rs  enumeration.rs  error.rs  id.rs  json.rs  middleware.rs  mod.rs  path.rs  query.rs  redis.rs  response.rs  serde.rs  server.rs  tenant.rs  utils.rs  valid.rs
crates/daoyi-common/src/app/auth/: db_auth.rs  jsonwebtoken_auth.rs  mod.rs
crates/daoyi-common/src/app/errors/: error.rs  mod.rs
crates/daoyi-common/src/app/middlewares/: auth_middleware.rs  mod.rs  tenant_middleware.rs
crates/daoyi-common/src/config/: auth.rs  mod.rs  redis.rs  tenant.rs
crates/daoyi-common/src/entity/: sys_user.rs
crates/daoyi-common/src/security/: login_user.rs
crates/daoyi-entities-infra/: Cargo.toml
crates/daoyi-entities-infra/src/entity/: infra_api_access_log.rs  infra_api_error_log.rs  infra_codegen_column.rs  infra_codegen_table.rs  infra_config.rs  infra_file.rs  infra_file_config.rs  infra_file_content.rs  infra_job.rs  infra_job_log.rs
crates/daoyi-entities-system/: Cargo.toml
crates/daoyi-entities-system/src/entity/: system_dept.rs  system_dict_data.rs  system_dict_type.rs  system_login_log.rs  system_mail_account.rs  system_mail_log.rs  system_menu.rs  system_notice.rs  system_notify_template.rs  system_oauth2_access_token.rs  system_oauth2_approve.rs  system_oauth2_client.rs  system_oauth2_code.rs  system_oauth2_refresh_token.rs  system_operate_log.rs  system_post.rs  system_role.rs  system_sms_channel.rs  system_sms_code.rs  system_sms_log.rs  system_sms_template.rs  system_social_client.rs  system_social_user.rs  system_social_user_bind.rs  system_tenant.rs  system_tenant_package.rs  system_user_post.rs  system_user_role.rs  system_users.rs
crates/daoyi-module-demo/: Cargo.toml
crates/daoyi-module-demo/src/api/: auth.rs  mod.rs  redis.rs  user.rs
crates/daoyi-module-demo/src/entity/: mod.rs  prelude.rs  sys_user.rs  yudao_demo01_contact.rs  yudao_demo02_category.rs  yudao_demo03_course.rs  yudao_demo03_grade.rs  yudao_demo03_student.rs
crates/daoyi-module-infra/src/entity/: infra_data_source_config.rs  infra_job_log.rs  prelude.rs
crates/daoyi-module-system/: Cargo.toml
crates/daoyi-module-system/src/: lib.rs
crates/daoyi-module-system/src/api/: auth.rs  mod.rs
crates/daoyi-module-system/src/entity/: mod.rs  prelude.rs  system_dict_type.rs  system_mail_log.rs  system_mail_template.rs  system_notify_message.rs  system_oauth2_access_token.rs  system_oauth2_code.rs  system_operate_log.rs  system_post.rs  system_role_menu.rs  (+3 more)
crates/libs/common/daoyi-common/: Cargo.toml
crates/libs/common/daoyi-common/src/: lib.rs
crates/libs/common/daoyi-common/src/app/: common.rs  database.rs  latency.rs  logger.rs  mod.rs  openapi.rs  redis_util.rs  server.rs
crates/libs/common/daoyi-common/src/app/auth/: db_auth.rs  jsonwebtoken_auth.rs  mod.rs
crates/libs/common/daoyi-common/src/app/middlewares/: auth_middleware.rs  mod.rs  tenant_middleware.rs
crates/libs/common/daoyi-common/src/config/: database.rs  mod.rs  nacos.rs  redis.rs  server.rs  sms_code.rs
crates/libs/common/daoyi-common/src/security/: login_user.rs
crates/libs/common/daoyi-common/src/service/: mod.rs
crates/libs/daoyi-common/: Cargo.toml
crates/libs/daoyi-common-support/: Cargo.toml
crates/libs/daoyi-common-support/src/: lib.rs
crates/libs/daoyi-common-support/src/models/: mod.rs
crates/libs/daoyi-common-support/src/support/: orm.rs  tenant.rs
crates/libs/daoyi-common-support/src/utils/: enumeration.rs  id.rs  mod.rs  serde.rs  str_utils.rs
crates/libs/daoyi-common-support/src/utils/errors/: error.rs
crates/libs/daoyi-common-support/src/utils/web/: json.rs  path.rs  valid.rs  validation.rs
crates/libs/daoyi-entities-infra/: Cargo.toml
crates/libs/daoyi-entities-system/: Cargo.toml
crates/modules/biz/daoyi-module-system/: Cargo.toml
crates/modules/biz/daoyi-module-system/resources/: nacos-example.yaml
crates/modules/biz/daoyi-module-system/src/: lib.rs  main.rs
crates/modules/biz/daoyi-module-system/src/api/: mod.rs
crates/modules/biz/daoyi-module-system/src/api/admin/: auth.rs
crates/modules/biz/daoyi-module-system/src/service/: admin_auth.rs  admin_user.rs  login_logger.rs  menu.rs  mod.rs  operate_logger.rs  permission.rs  post.rs  role.rs  sms_code.rs  sms_code_api.rs  sms_log.rs  sms_send.rs  social_user.rs
crates/modules/biz/daoyi-module-system/src/vo/: mod.rs
crates/modules/biz/daoyi-module-system/src/vo/auth/: auth_login_req_vo.rs  auth_login_resp_vo.rs  auth_permission_info_resp_vo.rs  auth_refresh_token_req_vo.rs  auth_register_req_vo.rs  auth_sms_send_req_vo.rs  mod.rs
crates/modules/biz/daoyi-module-system/src/vo/menu/: menu_vo.rs  mod.rs
crates/modules/biz/daoyi-module-system/src/vo/sms/: mod.rs  sms_code_send_req_dto.rs
crates/modules/biz/daoyi-module-system/src/vo/user/: mod.rs  user_vo.rs
crates/modules/daoyi-module-demo/: Cargo.toml
crates/modules/daoyi-module-system/: Cargo.toml
crates/modules/daoyi-module-system/src/api/admin/: auth.rs
crates/modules/daoyi-module-system/src/api/app/: mod.rs
crates/modules/daoyi-module-system/src/service/: auth.rs  dept.rs  logger.rs  menu.rs  mod.rs  oauth2.rs  oauth2_client.rs  oauth2_token.rs  permission.rs  role.rs  sms.rs  sms_channel.rs  sms_code.rs  sms_template.rs  social.rs  tenant.rs  user.rs
crates/modules/daoyi-module-system/src/vo/: auth.rs
docs/: OPENAPI.md
resources/: application.yaml
sql/pg/: init-dev.sql  init-infra.sql  init-system.sql  schema-demo.sql  schema-dev.sql  update-dev-202509.sql
src/: main.rs
src/api/: auth.rs  mod.rs  user.rs
src/app/: auth.rs  database.rs  enumeration.rs  logger.rs  mod.rs  path.rs  response.rs  server.rs  utils.rs  valid.rs
src/config/: mod.rs
src/entity/: prelude.rs
(+134 files in other folders)
