[workspace]
members = ["crates/libs/*/*", "crates/modules/*/*"]
[package]
name = "ruoyi-vue-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
daoyi-common-support.workspace = true
daoyi-common.workspace = true
tokio.workspace = true
anyhow.workspace = true
axum.workspace = true
tracing.workspace = true
daoyi-module-demo.workspace = true
daoyi-module-system.workspace = true
daoyi-module-infra.workspace = true

[workspace.dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono", "local-time"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = { version = "1.0.100" }
sea-orm = { version = "1.1.19", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
num_cpus = "1.17.0"
thiserror = { version = "2.0.17" }
tower-http = { version = "0.6.6", features = ["trace", "timeout", "limit", "cors", "normalize-path", "auth"] }
xid = "1.1.1"
bytesize = "2.3.0"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
regex = "1.12.2"
idgenerator = "2.0.0"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
wax = "0.6.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
deadpool-redis = "0.22.0"
chrono = { version = "0.4.42", features = ["serde"] }
indextree = "4.7.4"
lazy_static = "1.5.0"
humantime = "2.3.0"
rand = "0.9.2"
strfmt = "0.2.5"
nacos-sdk = { version = "0.5.3", features = ["default"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
daoyi-common = { version = "0.1.0", path = "crates/libs/common/daoyi-common" }
daoyi-module-demo = { version = "0.1.0", path = "crates/modules/biz/daoyi-module-demo" }
daoyi-module-infra = { version = "0.1.0", path = "crates/modules/biz/daoyi-module-infra" }
daoyi-module-system = { version = "0.1.0", path = "crates/modules/biz/daoyi-module-system" }
daoyi-entities-infra = { version = "0.1.0", path = "crates/libs/entities/daoyi-entities-infra" }
daoyi-entities-system = { version = "0.1.0", path = "crates/libs/entities/daoyi-entities-system" }
daoyi-common-support = { version = "0.1.0", path = "crates/libs/common/daoyi-common-support" }
