[package]
name = "daoyi-common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
serde.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tower-http.workspace = true
xid.workspace = true
bytesize.workspace = true
validator.workspace = true
axum-valid.workspace = true
regex.workspace = true
idgenerator.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
wax.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
chrono.workspace = true
daoyi-entities-system.workspace = true
