[package]
name = "daoyi-module-system"
version = "0.1.0"
edition = "2024"

[dependencies]
daoyi-common.workspace = true
daoyi-entities-system.workspace = true
daoyi-common-support.workspace = true
axum.workspace = true
sea-orm.workspace = true
serde.workspace = true
validator.workspace = true
serde_json.workspace = true
indextree.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
utoipa.workspace = true